<resources>
    <string name="app_name">reconscious</string>
    <string name="psychedelic_telehealth">PSYCHEDELIC TELEHEALTH</string>
    <string name="get_started">GET STARTED</string>
    <string name="how_it_works">HOW IT WORKS</string>
    <string name="intro_detail1">Reconscious Medical enhances patient and practitioner access to evidence-based psychedelic therapies by integrating user friendly technologies for in-clinic and telemedicine experiences.</string>
    <string name="intro_detail2">Complete a simple initial survey to determine appropriateness for Ketamine-Assisted Psychotherapy. Sign into Patient Portal. You’ll be matched and scheduled with the best prescriber to suit your needs</string>
    <string name="intro_detail3">Log into secure video-conferencing. Assess the appropriateness of this medication and treatment for you. Get matched and scheduled with the best therapist to suit your needs</string>
    <string name="intro_detail4">Engage in preparation work to get the most out of your sessions. Meet with your therapist virtually or in clinic for your medicine journeys. Access holistic integration tools to align your mind, body, and spirit</string>
    <string name="intro_detail1_title">Transformative Healing</string>
    <string name="intro_detail2_title">Sign Up and Complete Survey</string>
    <string name="intro_detail3_title">Initial Medical Consultation</string>
    <string name="intro_detail4_title">Ketamine-Assisted Psychotherapy</string>
    <string name="email">Email</string>
    <string name="create_my_account">Create My Account</string>
    <string name="button_continue">CONTINUE</string>
    <string name="str_policy"><![CDATA[By clicking “Continue”, you are agreeing to the Reconscious Medical Terms of Use, Privacy Policy & Telehealth Consent Policy.]]></string>
    <string name="hipaa_compliant">HIPAA COMPLIANT</string>
    <string name="password">Password</string>
    <string name="signin_detail">Sign in to your Reconscious Medical account below</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="didn_t_receive_email">Didn’t receive email?</string>
    <string name="enter">ENTER</string>
    <string name="forgot_password_detail">Enter your email or phone number to reset your password</string>
    <string name="create_a_new_password">Create a new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">NEXT</string>
    <string name="a_few_more_details">A Few More Details</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="signup_pass_detail">(Password must contain minimum of 6 letters and at least one number)</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="home">Home</string>
    <string name="integrations">Integrations</string>
    <string name="journal">Journal</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_reconscious_medical">Welcome to Reconscious Medical</string>
    <string name="book_new_session">BOOK NEW SESSION</string>
    <string name="upcoming_detail">You have no upcoming appointments, book your new session today</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="sound_experiences">Sound Experiences</string>
    <string name="sount_detail">Connect your Spotify to unlock our Sound Experiences</string>
    <string name="connect_my">CONNECT MY</string>
    <string name="my_journal">My Journal</string>
    <string name="open_journal">OPEN JOURNAL</string>
    <string name="select_your_package">Select Your Package</string>
    <string name="package_details">Because psychedelic therapy requires careful screening and monitoring of symptoms before, during and after treatment, it is possible that you purchase a treatment/package and are/become not apporpriate to continue. If this occurs, you will be provided treatment recommendations and may receive a refund for remaining unused sessions.</string>
    <string name="skip">Skip</string>
    <string name="available_to_anyone_in_the_world">Available to anyone in the world</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="amazing">Amazing</string>
    <string name="open">OPEN</string>
    <string name="edit">EDIT</string>
    <string name="lock_sharing_with_therapist">Lock sharing with therapist</string>
    <string name="link">LINK</string>
    <string name="link_to_session">Link to session</string>
    <string name="title">Title</string>
    <string name="type_how_you_are_feeling_today">Type how you are feeling today</string>
    <string name="save">SAVE</string>
    <string name="cart_number">Card Number</string>
    <string name="secure_payment">Secure Payment</string>
    <string name="you_will_be_billed">You will be billed</string>
    <string name="googlepay_button_content_description">Pay with</string>
    <string name="total">Total:</string>
    <string name="payfor">for</string>
    <string name="str_let_complete">Now, Let’s Complete Your Billing Information</string>
    <string name="name">Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="take_a_final_look_at_your_purchase">Take a final look at your purchase</string>
    <string name="bill_to">Bill To</string>
    <string name="credit_card">Credit Card</string>
    <string name="you_will_be_billed_for">You will be billed for:</string>
    <string name="confirm">CONFIRM</string>
    <string name="you_will_receive_a_confirmation_to">You will receive a confirmation to</string>
    <string name="order_confirmation">Order Confirmation:</string>
    <string name="continue_to_book_your_first_appointment">Continue to Book Your First Appointment</string>
    <string name="payment_confirmed">Payment Confirmed</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="date">Date</string>
    <string name="please_select_a_date">Please Select a Date</string>
    <string name="schedule_your_appointment">Schedule Your Appointment</string>
    <string name="let_s_schedule_your_appointment_for">Let’s Schedule Your Appointment for</string>

</resources>