<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mark_welcome"
            android:layout_marginBottom="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_email"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:background="@drawable/layout_bg_edittext"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/boston_regular"
                android:textSize="13sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/img_error"/>
            <ImageView
                android:id="@+id/img_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_error"
                android:visibility="gone"
                android:layout_marginEnd="12dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_create_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_my_account"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:fontFamily="@font/boston_semibold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_continue"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:background="@drawable/linear_corner24_button"
            android:layout_marginTop="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_create_button"
            tools:ignore="UselessParent">
            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/boston_semibold"
                android:text="@string/button_continue"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_welcome"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_logo_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txt_logo_detail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/hipaa_compliant"
                android:textSize="12sp"
                android:fontFamily="@font/boston_heavy"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_police"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txt_police"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/str_policy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/boston_regular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_bottom"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:translationX="80dp"
        android:translationY="-120dp"
        android:src="@drawable/arachnoid_bottom"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/img_top"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:translationX="100dp"
        android:translationY="100dp"
        android:src="@drawable/arachnoid_top"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>