<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_shopify"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/boston_bold"
            android:text="@string/sound_experiences"
            android:gravity="center"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/boston_bold"
            android:text="@string/sount_detail"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_connect"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/linear_corner24_button"
            android:layout_marginBottom="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txt_connect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/img_shopify"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/boston_semibold"
                android:text="@string/connect_my"/>

            <ImageView
                android:id="@+id/img_shopify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_shopify"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/txt_shopify"
                app:layout_constraintLeft_toRightOf="@+id/txt_connect"/>

            <TextView
                android:id="@+id/txt_shopify"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_shopify"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/boston_bold"
                android:text="Shopify"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>