<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/how_are_you_feeling_today"
            android:textSize="30sp"
            android:fontFamily="@font/boston_bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_bottom"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_next"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:background="@drawable/linear_corner24_button"
                android:layout_marginBottom="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/layout_skip"
                tools:ignore="UselessParent">
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/boston_semibold"
                    android:text="@string/next"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_skip"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UselessParent">

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:textColor="@color/colorMain"
                    android:textSize="16sp"
                    android:fontFamily="@font/boston_semibold"
                    android:text="@string/skip"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_bottom"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:translationX="80dp"
        android:translationY="-120dp"
        android:src="@drawable/arachnoid_bottom"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/img_top"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:translationX="100dp"
        android:translationY="100dp"
        android:src="@drawable/arachnoid_top"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>